k8s/services/news-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: news-app-service
spec:
  selector:
    app.kubernetes.io/name: news-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-app-deployment
  labels:
    app: news-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: news-app
  template:
    metadata:
      labels:
        app: news-app
    spec:
      containers:
        - name: news-app
          image: drennout/news-app:1.0.0
          ports:
            - containerPort: 8080
