k8s/services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /news-api
            pathType: Prefix
            backend:
              service:
                name: news-app-service
                port:
                  number: 8081
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 8080
